xx, S3QL 0.31

  * Fixed a race condition when a block is expired while it is
    in transit but has already been modified again.

2011-02-04, S3QL 0.30

  * S3QL now defaults to use unencrypted HTTP connections, which 
    significantly improves performance when using the S3 backend.
    For an encrypted file system, all data is already encrypted
    anyway, and authentication data is never transmitted in plain text
    even for unencrypted file systems. Therefore, the use of SSL
    brings little gain for most users. To force SSL usage, the
    new --ssl option can be used.    

  * mkfs.s3ql now has a --force option to overwrite an existing
    file system.
    
2010-12-30, S3QL 0.29

  * The FUSE interface has been rewritten using Cython and factored
    out into a separate package, http://code.google.com/p/python-llfuse/.
    
    This should result in easier installation, better performance
    and better maintainability.


2010-12-19, S3QL 0.28

  * "s3qlctrl upload-meta" now works even if the file system has
    been mounted with --metadata-upload-interval=0.
    
  * File system metadata is now permanently cached locally. This
    significantly reduces the time required to mount the file
    system.
    
  * The documentation is now also included in PDF format.

2010-12-11, S3QL 0.27

  * The authinfo file now supports passwords that include 
    white space. 
  
  * The s3qladm command can now be used to download metadata
    backups.
  
  * The --strip-meta option for mount.s3ql has been removed,
    redundant data is now always stripped before upload.

  * mount.s3ql now has a --upstart option so that it can easily
    run as an upstart job. An example job definition is included
    in contrib/s3ql.conf.
    
  * s3qlctrl now has an 'upload-meta' command to trigger a metadata
    upload while the file system is mounted.

  * Fixed a bug that preserved old data when truncating a file
    to zero. If you ever had fsck errors of the form
